TLA_ANTLR/TLAPlusGrammarParser.java
// Generated from tla\TLAPlusGrammar.g4 by ANTLR 4.5.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TLAPlusGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, WS=111, SPACES=112, VIRGULE=113, MODULE=114, 
		EXTENDS=115, LOCAL=116, FourMinus=117, FourEquals=118, VARIABLE=119, VARIABLES=120, 
		CONSTANT=121, CONSTANTS=122, LEFTSQUAREBRACKET=123, RIGHTSQUAREBRACKET=124, 
		LEFTBRACKET=125, RIGHTBRACKET=126, EQUALEQUAL=127, INSTANCE=128, WITH=129, 
		Underscore=130, Ass=131, THEOREM=132, ANTISLASHANTISLASHIN=133, IN=134, 
		LEFTARROW=135, EXCLAMATIONPOINT=136, RIGHTARROW=137, PIPERIGHTARROW=138, 
		COLON=139, POINT=140, AorE=141, AorEbold=142, CURLYBRACKETLEFT=143, CURLYBRACKETRIGHT=144, 
		CHOOSE=145, LET=146, CASE=147, XorTimes=148, EQUAL=149, AT=150, ANTISLASHSLASH=151, 
		SLASHANTISLASH=152, OTHER=153, SQUARE=154, EXCEPT=155, TUPLELEFT=156, 
		TUPLERIGHT=157, IF=158, THEN=159, ELSE=160, WorS=161, WForSF=162, ReservedWord=163, 
		Identifier=164, Name=165, Num=166, NameChar=167, String=168, ESC_SEQ=169, 
		OCTAL_ESC=170, UNICODE_ESC=171, HEX_DIGIT=172;
	public static final int
		RULE_nameList = 0, RULE_module = 1, RULE_unit = 2, RULE_opDeclList = 3, 
		RULE_variableDeclaration = 4, RULE_constantDeclaration = 5, RULE_operatorDefinition = 6, 
		RULE_quantifierBoundList = 7, RULE_functionDefinition = 8, RULE_substitutionList = 9, 
		RULE_instance = 10, RULE_moduleDefinition = 11, RULE_assumption = 12, 
		RULE_theorem = 13, RULE_underscoreList = 14, RULE_opDecl = 15, RULE_nonFixLHS = 16, 
		RULE_quantifierBound = 17, RULE_substitution = 18, RULE_argument = 19, 
		RULE_expressionList = 20, RULE_singleInstancePrefix = 21, RULE_instancePrefix = 22, 
		RULE_generalIdentifier = 23, RULE_generalPrefixOp = 24, RULE_generalInfixOp = 25, 
		RULE_generalPostfixOp = 26, RULE_caseArm = 27, RULE_nameArrowExprList = 28, 
		RULE_nameColonExprList = 29, RULE_defi = 30, RULE_exceptInterfaceTerminal = 31, 
		RULE_exceptInterface = 32, RULE_exceptList = 33, RULE_expression = 34, 
		RULE_identifierList = 35, RULE_identifierOrTuple = 36, RULE_prefixOp = 37, 
		RULE_infixOp = 38, RULE_postfixOp = 39, RULE_comment = 40;
	public static final String[] ruleNames = {
		"nameList", "module", "unit", "opDeclList", "variableDeclaration", "constantDeclaration", 
		"operatorDefinition", "quantifierBoundList", "functionDefinition", "substitutionList", 
		"instance", "moduleDefinition", "assumption", "theorem", "underscoreList", 
		"opDecl", "nonFixLHS", "quantifierBound", "substitution", "argument", 
		"expressionList", "singleInstancePrefix", "instancePrefix", "generalIdentifier", 
		"generalPrefixOp", "generalInfixOp", "generalPostfixOp", "caseArm", "nameArrowExprList", 
		"nameColonExprList", "defi", "exceptInterfaceTerminal", "exceptInterface", 
		"exceptList", "expression", "identifierList", "identifierOrTuple", "prefixOp", 
		"infixOp", "postfixOp", "comment"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'-'", "'~'", "'\\lnot'", "'\\neg'", "'<>'", "'DOMAIN'", "'ENABLED'", 
		"'SUBSET'", "'UNCHANGED'", "'UNION'", "'!!'", "'#'", "'##'", "'$'", "'$$'", 
		"'%'", "'%%'", "'&'", "'&&'", "'(+)'", "'(-)'", "'(.)'", "'(/)'", "'(\\X)'", 
		"'*'", "'**'", "'+'", "'++'", "'-+->'", "'--'", "'-|'", "'..'", "'...'", 
		"'/'", "'//'", "'/='", "'::='", "':='", "':>'", "'<'", "'<:'", "'<=>'", 
		"'=<'", "'=>'", "'=|'", "'>'", "'>='", "'?'", "'??'", "'@@'", "'\\'", 
		"'^'", "'^^'", "'|'", "'|-'", "'|='", "'||'", "'~>'", "'\\approx'", "'\\geq'", 
		"'\\oslash'", "'\\sqsupseteq'", "'\\asymp'", "'\\gg'", "'\\otimes'", "'\\star'", 
		"'\\bigcirc'", "'\\prec'", "'\\subset'", "'\\bullet'", "'\\intersect'", 
		"'\\preceq'", "'\\subseteq'", "'\\cap'", "'\\land'", "'\\propto'", "'\\succ'", 
		"'\\cdot'", "'\\leq'", "'\\sim'", "'\\succeq'", "'\\circ'", "'\\ll'", 
		"'\\simeq'", "'\\supset'", "'\\cong'", "'\\lor'", "'\\sqcap'", "'\\supseteq'", 
		"'\\cup'", "'\\o'", "'\\sqcup'", "'\\union'", "'\\div'", "'\\odot'", "'\\sqsubset'", 
		"'\\uplus'", "'\\doteq'", "'\\ominus'", "'\\sqsubseteq'", "'\\wr'", "'\\equiv'", 
		"'\\oplus'", "'\\sqsupset'", "'^+'", "'^*'", "'^#'", "'''", "'(*'", "'*)'", 
		null, null, "','", "'MODULE'", "'EXTENDS'", "'LOCAL'", null, null, "'VARIABLE'", 
		"'VARIABLES'", "'CONSTANT'", "'CONSTANTS'", "'['", "']'", "'('", "')'", 
		"'=='", "'INSTANCE'", "'WITH'", "'_'", null, "'THEOREM'", "'\\in'", "'IN'", 
		"'<-'", "'!'", "'->'", "'|->'", "':'", "'.'", null, null, "'{'", "'}'", 
		"'CHOOSE'", "'LET'", "'CASE'", null, "'='", "'@'", "'\\/'", "'/\\'", "'OTHER'", 
		"'[]'", "'EXCEPT'", "'<<'", "'>>'", "'IF'", "'THEN'", "'ELSE'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "WS", "SPACES", "VIRGULE", "MODULE", "EXTENDS", "LOCAL", 
		"FourMinus", "FourEquals", "VARIABLE", "VARIABLES", "CONSTANT", "CONSTANTS", 
		"LEFTSQUAREBRACKET", "RIGHTSQUAREBRACKET", "LEFTBRACKET", "RIGHTBRACKET", 
		"EQUALEQUAL", "INSTANCE", "WITH", "Underscore", "Ass", "THEOREM", "ANTISLASHANTISLASHIN", 
		"IN", "LEFTARROW", "EXCLAMATIONPOINT", "RIGHTARROW", "PIPERIGHTARROW", 
		"COLON", "POINT", "AorE", "AorEbold", "CURLYBRACKETLEFT", "CURLYBRACKETRIGHT", 
		"CHOOSE", "LET", "CASE", "XorTimes", "EQUAL", "AT", "ANTISLASHSLASH", 
		"SLASHANTISLASH", "OTHER", "SQUARE", "EXCEPT", "TUPLELEFT", "TUPLERIGHT", 
		"IF", "THEN", "ELSE", "WorS", "WForSF", "ReservedWord", "Identifier", 
		"Name", "Num", "NameChar", "String", "ESC_SEQ", "OCTAL_ESC", "UNICODE_ESC", 
		"HEX_DIGIT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TLAPlusGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TLAPlusGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class NameListContext extends ParserRuleContext {
		public List<TerminalNode> Name() { return getTokens(TLAPlusGrammarParser.Name); }
		public TerminalNode Name(int i) {
			return getToken(TLAPlusGrammarParser.Name, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(TLAPlusGrammarParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(TLAPlusGrammarParser.Identifier, i);
		}
		public List<TerminalNode> VIRGULE() { return getTokens(TLAPlusGrammarParser.VIRGULE); }
		public TerminalNode VIRGULE(int i) {
			return getToken(TLAPlusGrammarParser.VIRGULE, i);
		}
		public NameListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLAPlusGrammarListener ) ((TLAPlusGrammarListener)listener).enterNameList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLAPlusGrammarListener ) ((TLAPlusGrammarListener)listener).exitNameList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TLAPlusGrammarVisitor ) return ((TLAPlusGrammarVisitor<? extends T>)visitor).visitNameList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameListContext nameList() throws RecognitionException {
		NameListContext _localctx = new NameListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_nameList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_la = _input.LA(1);
			if ( !(_la==Identifier || _la==Name) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULE) {
				{
				{
				setState(83);
				match(VIRGULE);
				setState(84);
				_la = _input.LA(1);
				if ( !(_la==Identifier || _la==Name) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public List<TerminalNode> FourMinus() { return getTokens(TLAPlusGrammarParser.FourMinus); }
		public TerminalNode FourMinus(int i) {
			return getToken(TLAPlusGrammarParser.FourMinus, i);
		}
		public TerminalNode MODULE() { return getToken(TLAPlusGrammarParser.MODULE, 0); }
		public TerminalNode FourEquals() { return getToken(TLAPlusGrammarParser.FourEquals, 0); }
		public TerminalNode Name() { return getToken(TLAPlusGrammarParser.Name, 0); }
		public TerminalNode Identifier() { return getToken(TLAPlusGrammarParser.Identifier, 0); }
		public TerminalNode EXTENDS() { return getToken(TLAPlusGrammarParser.EXTENDS, 0); }
		public List<UnitContext> unit() {
			return getRuleContexts(UnitContext.class);
		}
		public UnitContext unit(int i) {
			return getRuleContext(UnitContext.class,i);
		}
		public NameListContext nameList() {
			return getRuleContext(NameListContext.class,0);
		}
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLAPlusGrammarListener ) ((TLAPlusGrammarListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLAPlusGrammarListener ) ((TLAPlusGrammarListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TLAPlusGrammarVisitor ) return ((TLAPlusGrammarVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(FourMinus);
			setState(91);
			match(MODULE);
			setState(92);
			_la = _input.LA(1);
			if ( !(_la==Identifier || _la==Name) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(93);
			match(FourMinus);
			setState(99);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(94);
				match(EXTENDS);
				setState(97);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(95);
					nameList();
					}
					break;
				case 2:
					{
					setState(96);
					identifierList();
					}
					break;
				}
				}
			}

			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9))) != 0) || ((((_la - 109)) & ~0x3f) == 0 && ((1L << (_la - 109)) & ((1L << (T__108 - 109)) | (1L << (LOCAL - 109)) | (1L << (FourMinus - 109)) | (1L << (VARIABLE - 109)) | (1L << (VARIABLES - 109)) | (1L << (CONSTANT - 109)) | (1L << (CONSTANTS - 109)) | (1L << (INSTANCE - 109)) | (1L << (Ass - 109)) | (1L << (THEOREM - 109)) | (1L << (SQUARE - 109)) | (1L << (Identifier - 109)))) != 0)) {
				{
				{
				setState(101);
				unit();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(FourEquals);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ConstantDeclarationContext constantDeclaration() {
			return getRuleContext(ConstantDeclarationContext.class,0);
		}
		public OperatorDefinitionContext operatorDefinition() {
			return getRuleContext(OperatorDefinitionContext.class,0);
		}
		public TerminalNode LOCAL() { return getToken(TLAPlusGrammarParser.LOCAL, 0); }
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public InstanceContext instance() {
			return getRuleContext(InstanceContext.class,0);
		}
		public ModuleDefinitionContext moduleDefinition() {
			return getRuleContext(ModuleDefinitionContext.class,0);
		}
		public AssumptionContext assumption() {
			return getRuleContext(AssumptionContext.class,0);
		}
		public TheoremContext theorem() {
			return getRuleContext(TheoremContext.class,0);
		}
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode FourMinus() { return getToken(TLAPlusGrammarParser.FourMinus, 0); }
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLAPlusGrammarListener ) ((TLAPlusGrammarListener)listener).enterUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLAPlusGrammarListener ) ((TLAPlusGrammarListener)listener).exitUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TLAPlusGrammarVisitor ) return ((TLAPlusGrammarVisitor<? extends T>)visitor).visitUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unit);
		int _la;
		try {
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				constantDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				_la = _input.LA(1);
				if (_la==LOCAL) {
					{
					setState(111);
					match(LOCAL);
					}
				}

				setState(114);
				operatorDefinition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				_la = _input.LA(1);
				if (_la==LOCAL) {
					{
					setState(115);
					match(LOCAL);
					}
				}

				setState(118);
				functionDefinition();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				_la = _input.LA(1);
				if (_la==LOCAL) {
					{
					setState(119);
					match(LOCAL);
					}
				}

				setState(122);
				instance();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(124);
				_la = _input.LA(1);
				if (_la==LOCAL) {
					{
					setState(123);
					match(LOCAL);
					}
				}

				setState(126);
				moduleDefinition();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(127);
				assumption();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(128);
				theorem();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(129);
				module();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(130);
				comment();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(131);
				match(FourMinus);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
